<?xml version="1.0"?>
<package format="2">
  <name>marker_localisation</name>
  <version>0.0.0</version>
  <description>The marker_localisation package</description>

  <maintainer email="a.al-hindawi@imperial.ac.uk">Ahmed Al-Hindawi</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>image_geometry</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>

  <depend>python-opencv</depend>
  <depend>python-dlib</depend>
  <depend>python-scipy</depend>
  <depend>python-numpy</depend>

  <exec_depend>rviz</exec_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
